--- a/css/jvectormap/jquery-jvectormap-1.2.2.css
+++ b/css/jvectormap/jquery-jvectormap-1.2.2.css
@@ -39,3 +39,11 @@
     top: 30px;
 }
 */
+
+.jvectormap-region {
+    
+	stroke: #9c8673;
+    stroke-width: 0.5;
+	filter: glow(color=9c8673,strength=0.5);
+
+}
